updated our status

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>I'm from Eagle Pass, Texas!</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>in my spare time I enjoy playing video games and working out.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to become a software engineer for any major tech company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Houston, Texas.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I would love to be able to make sites from scratch.</p>
     </section>
 
     <footer id="footer">
