--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>I live in Houston, Texas.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I would love to be able to make sites from scratch.</p>
+      <p>I would love to be able to make sites from scratch and manage them.</p>
     </section>
 
     <footer id="footer">
